objects/Order_Event_Item__c.object
<CustomObject><fields>
        <fullName>ERP_Record_ID__c</fullName>
        <description>Captures the ID of the corresponding ERP record created by or linked to this Order Event Item record. When populated this will prevent future submissions of this record to the ERP system.</description>
        <inlineHelpText>Captures the ID of the corresponding ERP record created by or linked to this Order Event Item record. When populated this will prevent future submissions of this record to the ERP system.</inlineHelpText>
        <label>ERP Record ID</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Order_Event_Item_Counter__c</fullName>
        <description>Returns a 1 for each Order Event Item record. Useful for reporting purposes.</description>
        <formula>IF(LEN( Name )&gt;0,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Returns a 1 for each Order Event Item record. Useful for reporting purposes.</inlineHelpText>
        <label>Order Event Item Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Order_Event_Type__c</fullName>
        <description>Captures the Type field on the Order Event record.</description>
        <formula>TEXT(Order_Event__r.Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Captures the Type field on the Order Event record.</inlineHelpText>
        <label>Order Event Type</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Order_Event__c</fullName>
        <description>Required Master-Detail field to the Order Event record. Enables Rollup Summary fields for refund and other amounts.  Set when an Order Event Item is created from the Services Toolbox.</description>
        <inlineHelpText>Required Master-Detail field to the Order Event record. Enables Rollup Summary fields for refund and other amounts.</inlineHelpText>
        <label>Order Event</label>
        <referenceTo>Order_Event__c</referenceTo>
        <relationshipLabel>Order Event Item</relationshipLabel>
        <relationshipName>Order_Events</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields><fields>
        <fullName>Order_Product_Type__c</fullName>
        <description>Captures the Type field from the Order Product record. Used to calculate Refund Amount field.</description>
        <formula>Order_Product__r.Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Captures the Type field from the Order Product record. Used to calculate Refund Amount field.</inlineHelpText>
        <label>Order Product Type</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Refund_Amount__c</fullName>
        <description>In the case of a Refund Order Event, this field will be populated with a value calculated from the Net Amount field of the Order Product record it is connected to. This field is pulled by a Rollup Summary field to the Order Event record.</description>
        <inlineHelpText>In the case of a Refund Order Event, this field will be populated with a value calculated from the Net Amount field of the Order Product record it is connected to. This field is pulled by a Rollup Summary field to the Order Event record.</inlineHelpText>
        <label>Refund Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>SuperOrder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Required lookup field to the SuperOrder record.  Set when an Order Event Item is created from the Services Toolbox.</description>
        <inlineHelpText>Required lookup field to the SuperOrder record.</inlineHelpText>
        <label>SuperOrder</label>
        <referenceTo>SuperOrder__c</referenceTo>
        <relationshipLabel>Order Event Item</relationshipLabel>
        <relationshipName>Transaction_Items</relationshipName>
        <type>Lookup</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><description>This is a detail record to the Order Event object, and is used for itemized amount calculations. These records are connected to the Order Product records for GL and Refund amounts, and are part of the ERP integration with Netstuite.</description><enableActivities>true</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><label>Order Event Item</label><nameField>
        <displayFormat>OEI-{000000}</displayFormat>
        <label>Order Event Item</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>Order Event Item</pluralLabel><sharingModel>ControlledByParent</sharingModel><startsWith>Vowel</startsWith></CustomObject>